--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,17 @@
 
     <!-- contact form -->
 
+    <form action="#" method="post">
+      <label for="fullname">Name</label>
+      <input type="text" id="fullname" name="fullname" placeholder="your name" value="" required>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="your email" value="" required>
+      <label for="phone">Phone</label>
+      <input type="tel" id="phone" name="phone" placeholder="your phone (optional)" value="">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="10"></textarea>
+      <input type="submit" value="send">
+    </form>
+
   </body>
 </html>
