--- a/index.html
+++ b/index.html
@@ -44,5 +44,14 @@
     <!-- <p>Hello World!</p>
 
     <p>Hello Moon!</p> -->
+
+    <video controls>
+      <source src="videos/real-estate.mp4" type="video/mp4">
+      <source src="videos/real-estate.ogv" type="video/ogg">
+      Your browser does not support HTML5 video.<a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+    </video>
+
+    </video>
+
   </body>
 </html>
