--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </header>
 
     <section id="featured-property">
-
-      <figure>
-        <img src="images/intro-pic.jpg" alt="A beautiful living room" title="Welcome to Exceptional Realty Group!">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY = Photo by Denise Richards</figcaption>
-      </figure>
+      <h3>Featured Property</h3>
+        <figure>
+          <img src="images/intro-pic.jpg" alt="A beautiful living room" title="Welcome to Exceptional Realty Group!">
+          <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY = Photo by Denise Richards</figcaption>
+        </figure>
       <!--
 
       foldername/ = go inside folder
@@ -45,10 +45,44 @@
 
       -->
 
-      <p> Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <p> Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
 
-      <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+    </section>
+
+    <section id="details">
+      <div>
+        <h3>Contact</h3>
+          <p>
+            email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+            phone: +1 710 555 1234
+          </p>
+        <h3>Correspondence</h3>
+          <address>
+            Exceptional Realty<br>
+            P.O. Box 555<br>
+            Brooklyn, NY 11201
+          </address>
+      </div>
+
+      <div>
+        <h3>Links</h3>
+          <p>
+            <a href="#" target="_blank">Home Restoration</a><br>
+            <a href="#" target="_blank">Affordable Mortgages</a><br>
+            <a href="#" target="_blank">Professional Moving Crew</a><br>
+          </p>
+      </div>
+
+      <div>
+        <h3>Follow</h3>
+          <p>
+            <a href="#" target="_blank">YouTube</a><br>
+            <a href="#" target="_blank">Facebook</a><br>
+            <a href="#" target="_blank">Twitter</a><br>
+          </p>
+      </div>
     </section>
 
     <!-- <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
@@ -58,21 +92,19 @@
     <p>Hello Moon!</p> -->
 
     <section id="promotional">
-      <figure>
-        <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4">
-          <source src="videos/real-estate.ogv" type="video/ogg">
-          Your browser does not support HTML5 video.<a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
-        </video>
-        <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
-      </figure>
-
+      <h3>Promotions</h3>
+        <figure>
+          <video controls>
+            <source src="videos/real-estate.mp4" type="video/mp4">
+            <source src="videos/real-estate.ogv" type="video/ogg">
+            Your browser does not support HTML5 video.<a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+          </video>
+          <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+        </figure>
   </section>
 
   <footer>
-
     &copy; 2019 Exceptional Realty. All Rights Reserved.
-
   </footer>
 
   </body>
