Add links to stylesheet and normalize and modernizr libraries to all HTML files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <!-- helps to ensure cross-browser consistency -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
     <!-- entire viewable area of the page -->
@@ -101,11 +105,11 @@
           </video>
           <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
         </figure>
-  </section>
+    </section>
 
-  <footer>
-    &copy; 2019 Exceptional Realty. All Rights Reserved.
-  </footer>
+    <footer>
+      &copy; 2019 Exceptional Realty. All Rights Reserved.
+    </footer>
 
   </body>
 </html>
