--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -8,34 +8,58 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
-    <h1> Exceptional </h1>
-    <h2> Realty Group </h2>
+    <header>
 
-    <!-- links -->
-    <a href="index.html">About</a>
-    <a href="new-properties.html">New Properties</a>
-    <a href="real-estate-listings.html">Listings</a>
-    <a href="market-report.html">Market Report</a>
-    <a href="contact.html">Contact</a>
-    <a href="https://www.hud.gov/" target="_blank">HUD</a>
+      <div id="logo">
+        <h1> Exceptional </h1>
+        <h2> Realty Group </h2>
+      </div>
 
-    <h3> Popular Listings </h3>
-    <ol>
-      <li>348 Stockton St.</li>
-      <li>3742 Belevadere Rd.</li>
-      <li>41 Cleaton Ave.</li>
-    </ol>
+      <!-- links -->
+      <nav>
+        <a href="index.html">About</a>
+        <a href="new-properties.html">New Properties</a>
+        <a href="real-estate-listings.html">Listings</a>
+        <a href="market-report.html">Market Report</a>
+        <a href="contact.html">Contact</a>
+        <a href="https://www.hud.gov/" target="_blank">HUD</a>
+      </nav>
+    </header>
 
-    <h3> Property Archive </h3>
-    <h4> 2019 </h4>
-    <ul>
-      <li>Dec</li>
-      <li>Nov</li>
-      <li>Oct</li>
+    <section>
+      <h3>Condos</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+
+    <section>
+      <h3>Townhomes</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+
+    <section>
+      <h3>Co-Ops</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+
+    <h2>Featured Listings</h2>
+
+    <section>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+
+    <section>
+      <h3> Property Archive </h3>
+      <h4> 2019 </h4>
       <ul>
-        <li>17th</li>
-        <li>18th</li>
+        <li>Dec</li>
+        <li>Nov</li>
+        <li>Oct</li>
+        <ul>
+          <li>17th</li>
+          <li>18th</li>
+        </ul>
       </ul>
-    </ul>
+    </section>
+
   </body>
 </html>
