--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <!-- entire viewable area of the page -->
 
     <header>
-
-      <h1> Exceptional </h1>
-      <h2> Realty Group </h2>
+      <div id="logo">
+        <h1> Exceptional </h1>
+        <h2> Realty Group </h2>
+      </div>
 
       <nav>
       <!-- links -->
